# Lottery

./: pyproject.toml
lottery/: database.py  loteria.py  settings.py  utils.py
tests/: test_loteria.py
