[tool.poetry]
name = "lottery"
version = "0.1.0"
description = ""
authors = ["Daniel Lima"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pylint = "^3.3.1"
isort = "^5.13.2"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
